--- a/src/automatic-card.html
+++ b/src/automatic-card.html
@@ -1,45 +1,45 @@
-<div class="wrapper">
-	<!DOCTYPE html>
-	<!--[if lt IE 9]>      <html class="no-js old-ie" lang="ru"> <![endif]-->
-	<!--[if IE 9]>         <html class="no-js ie9" lang="ru"> <![endif]-->
-	<!--[if gt IE 9]><!-->
-	<html class="no-js" lang="ru">
-	<!--<![endif]-->
+<!DOCTYPE html>
+<!--[if lt IE 9]>      <html class="no-js old-ie" lang="ru"> <![endif]-->
+<!--[if IE 9]>         <html class="no-js ie9" lang="ru"> <![endif]-->
+<!--[if gt IE 9]><!-->
+<html class="no-js" lang="ru">
+<!--<![endif]-->
 
-	<head>
-		<meta charset="UTF-8">
-		<title>ЭA - Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ</title>
-		<!--Mobile optimized-->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.2">
-		<!--Theme color-->
-		<meta name="theme-color" content="#fff">
-		<!--SEO-->
-		<meta name="description" content="описание">
-		<meta name="keywords" content="ключевые слова">
-		<meta name="yandex-verification" content="XXXXXXXXXXXXXX">
-		<meta name="google-site-verification" content="XXXXXXXXXXXXXX">
-		<!--The Open Graph protocol-->
-		<meta property="og:type" content="website">
-		<meta property="og:locale" content="ru_RU">
-		<meta property="og:url" content="http://localhost:3000/index.html">
-		<meta property="og:title" content="Название">
-		<meta property="og:image" content="http://localhost:3000/img/logo.png">
-		<meta property="og:description" content="Описание">
-		<meta property="og:site_name" content="Расширенное название">
-		<!--Favicon-->
-		<link rel="shortcut icon" href="favicon.ico">
-		<link rel="icon" sizes="16x16 32x32 64x64" href="favicon.ico">
-		<link rel="apple-touch-icon" href="apple-touch-icon.png">
-		<!--Style-->
-		<link rel="stylesheet" href="css/libs.min.css">
-		<link rel="stylesheet" href="css/main.css">
-		<!--Modernizr-->
-		<script src="js/modernizr.min.js"></script>
-	</head>
+<head>
+	<meta charset="UTF-8">
+	<title>ЭA - Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ</title>
+	<!--Mobile optimized-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.2">
+	<!--Theme color-->
+	<meta name="theme-color" content="#fff">
+	<!--SEO-->
+	<meta name="description" content="описание">
+	<meta name="keywords" content="ключевые слова">
+	<meta name="yandex-verification" content="XXXXXXXXXXXXXX">
+	<meta name="google-site-verification" content="XXXXXXXXXXXXXX">
+	<!--The Open Graph protocol-->
+	<meta property="og:type" content="website">
+	<meta property="og:locale" content="ru_RU">
+	<meta property="og:url" content="http://localhost:3000/index.html">
+	<meta property="og:title" content="Название">
+	<meta property="og:image" content="http://localhost:3000/img/logo.png">
+	<meta property="og:description" content="Описание">
+	<meta property="og:site_name" content="Расширенное название">
+	<!--Favicon-->
+	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="icon" sizes="16x16 32x32 64x64" href="favicon.ico">
+	<link rel="apple-touch-icon" href="apple-touch-icon.png">
+	<!--Style-->
+	<link rel="stylesheet" href="css/libs.min.css">
+	<link rel="stylesheet" href="css/main.css">
+	<!--Modernizr-->
+	<script src="js/modernizr.min.js"></script>
+</head>
 
-	<body class="ea-site ea-has-catalog-menu">
-		<!--[if lt IE 9]> <div class="browserupgrade"><p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p></div> <![endif]-->
-		<!-- >>> head.tpl END <<< -->
+<body class="ea-site ea-has-catalog-menu">
+	<!--[if lt IE 9]> <div class="browserupgrade"><p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p></div> <![endif]-->
+	<!-- >>> head.tpl END <<< -->
+	<div class="wrapper">
 		<!--HEADER-->
 		<!--HEADER-->
 		<header class="header">
@@ -109,6 +109,7 @@
 					<div class="nav-wrap__row">
 						<div class="nav-wrap__cell">
 							<header class="nav-title">
+								<a href="#" class="btn-popup-close btn-nav-close btn-nav-close-js"><i></i><span>Закрыть</span></a>
 								<a href="index.html" class="logo-nav">
 									<div class="logo-nav__img"><span>Электроавтоматика</span></div>
 									<span class="logo-nav__title">Интернет-магазин</span>
@@ -2945,91 +2946,91 @@
 			</div>
 		</aside>
 		<!--SIDEBAR-->
-</div>
-<!-- >>> foot.tpl <<< -->
-<!--footer-->
-<footer class="footer">
-	<div class="max-wrap layout">
-		<div class="footer__holder">
-			<!--footer common-->
-			<div class="footer-common">
-				<div class="footer-common-holder">
-					<!--footer nav-->
-					<div class="footer-nav">
-						<div class="footer-nav__col">
-							<strong class="footer-nav__title"><a href="#"><span>Электрощитовое оборудование</span></a></strong>
-							<ul class="footer-nav__links">
-								<li><a href="#"><span>Трансформаторные подстанции (однотрансформаторные)</span></a></li>
-								<li><a href="#"><span>Камеры сборные односторонние КСО</span></a></li>
-								<li><a href="#"><span>Ячейки ЩО-70</span></a></li>
-							</ul>
-						</div>
-						<div class="footer-nav__col">
-							<strong class="footer-nav__title"><span>Трансформаторы ТМГ</span></strong>
-							<ul class="footer-nav__links">
-								<li><a href="#"><span>Пункт коммерческого учета ПКУ-6 (10) КВ</span></a></li>
-								<li><a href="#"><span>Вводно-распределительные устройства ВРУ</span></a></li>
-								<li><a href="#"><span>Главные распределительные щиты ГРЩ</span></a></li>
-							</ul>
-						</div>
-						<div class="footer-nav__col">
-							<strong class="footer-nav__title"><span>Высоковольтное оборудование</span></strong>
-							<ul class="footer-nav__links">
-								<li><a href="#"><span>Другие низковольтные комплектные устройства  (ШР, ПР, ЯРП, ЯВУ, ШУ, ОЩВ, ЩЭ, ЯТП,ЩСУ, ЩАП, РУСМ, Я5ХХХ,АВР)</span></a></li>
-							</ul>
-						</div>
-						<div class="footer-nav__col">
-							<ul class="footer-nav__list">
-								<li><a href="#"><span>О компании</span></a></li>
-								<li><a href="#"><span>Производство</span></a></li>
-								<li><a href="#"><span>Монтажные работы</span></a></li>
-								<li><a href="#"><span>Сотрудничество</span></a></li>
-								<li><a href="#"><span>Заказ</span></a></li>
-								<li><a href="#"><span>Контакты</span></a></li>
-							</ul>
-						</div>
-						<div class="footer-nav__col footer-add-info">
-							<div class="footer-nav__item">
-								<span class="copyright">&copy; 2017 ОАО ДВЭМЗ»</span>
-							</div>
-							<div class="footer-nav__item">
-								<ul class="dl">
-									<li>
-										<div class="dt hide">Адрес:</div>
-										<div class="dd">ОАО ДВЭМЗ, г. Владивосток, ул. Молодежная, строение 1, корп. 3</div>
-									</li>
-									<li>
-										<div class="dt">Тел:</div>
-										<div class="dd"><a href="tel:+7 (423) 230-21-37">+7 (423) 230-21-37</a></div>
-									</li>
-									<li>
-										<div class="dt">Факс:</div>
-										<div class="dd">(423) 254 48 86</div>
-									</li>
-									<li>
-										<div class="dt">Эл. почта:</div>
-										<div class="dd"><a href="mailto:info@dvemz.ru">info@dvemz.ru</a></div>
-									</li>
+	</div>
+	<!-- >>> foot.tpl <<< -->
+	<!--footer-->
+	<footer class="footer">
+		<div class="max-wrap layout">
+			<div class="footer__holder">
+				<!--footer common-->
+				<div class="footer-common">
+					<div class="footer-common-holder">
+						<!--footer nav-->
+						<div class="footer-nav">
+							<div class="footer-nav__col">
+								<strong class="footer-nav__title"><a href="#"><span>Электрощитовое оборудование</span></a></strong>
+								<ul class="footer-nav__links">
+									<li><a href="#"><span>Трансформаторные подстанции (однотрансформаторные)</span></a></li>
+									<li><a href="#"><span>Камеры сборные односторонние КСО</span></a></li>
+									<li><a href="#"><span>Ячейки ЩО-70</span></a></li>
 								</ul>
 							</div>
-							<div class="footer-nav__item">
-								<strong class="dev">Дизайн сайта: <a href="http://astronim.by/">Astronim*Support</a></strong>
+							<div class="footer-nav__col">
+								<strong class="footer-nav__title"><span>Трансформаторы ТМГ</span></strong>
+								<ul class="footer-nav__links">
+									<li><a href="#"><span>Пункт коммерческого учета ПКУ-6 (10) КВ</span></a></li>
+									<li><a href="#"><span>Вводно-распределительные устройства ВРУ</span></a></li>
+									<li><a href="#"><span>Главные распределительные щиты ГРЩ</span></a></li>
+								</ul>
+							</div>
+							<div class="footer-nav__col">
+								<strong class="footer-nav__title"><span>Высоковольтное оборудование</span></strong>
+								<ul class="footer-nav__links">
+									<li><a href="#"><span>Другие низковольтные комплектные устройства  (ШР, ПР, ЯРП, ЯВУ, ШУ, ОЩВ, ЩЭ, ЯТП,ЩСУ, ЩАП, РУСМ, Я5ХХХ,АВР)</span></a></li>
+								</ul>
+							</div>
+							<div class="footer-nav__col">
+								<ul class="footer-nav__list">
+									<li><a href="#"><span>О компании</span></a></li>
+									<li><a href="#"><span>Производство</span></a></li>
+									<li><a href="#"><span>Монтажные работы</span></a></li>
+									<li><a href="#"><span>Сотрудничество</span></a></li>
+									<li><a href="#"><span>Заказ</span></a></li>
+									<li><a href="#"><span>Контакты</span></a></li>
+								</ul>
+							</div>
+							<div class="footer-nav__col footer-add-info">
+								<div class="footer-nav__item">
+									<span class="copyright">&copy; 2017 ОАО ДВЭМЗ»</span>
+								</div>
+								<div class="footer-nav__item">
+									<ul class="dl">
+										<li>
+											<div class="dt hide">Адрес:</div>
+											<div class="dd">ОАО ДВЭМЗ, г. Владивосток, ул. Молодежная, строение 1, корп. 3</div>
+										</li>
+										<li>
+											<div class="dt">Тел:</div>
+											<div class="dd"><a href="tel:+7 (423) 230-21-37">+7 (423) 230-21-37</a></div>
+										</li>
+										<li>
+											<div class="dt">Факс:</div>
+											<div class="dd">(423) 254 48 86</div>
+										</li>
+										<li>
+											<div class="dt">Эл. почта:</div>
+											<div class="dd"><a href="mailto:info@dvemz.ru">info@dvemz.ru</a></div>
+										</li>
+									</ul>
+								</div>
+								<div class="footer-nav__item">
+									<strong class="dev">Дизайн сайта: <a href="http://astronim.by/">Astronim*Support</a></strong>
+								</div>
 							</div>
 						</div>
+						<!--footer nav end-->
 					</div>
-					<!--footer nav end-->
 				</div>
+				<!--footer common end-->
 			</div>
-			<!--footer common end-->
 		</div>
-	</div>
-</footer>
-<!--footer end-->
-<!--Map-->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnFqiG7GVEuZZeE5XCILGj1Tqz1KOMye8&sensor=false&extension=.js&language=ru"></script>
-<script src="js/jquery.min.js"></script>
-<script src="js/libs.js"></script>
-<script src="js/common.js"></script>
+	</footer>
+	<!--footer end-->
+	<!--Map-->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnFqiG7GVEuZZeE5XCILGj1Tqz1KOMye8&sensor=false&extension=.js&language=ru"></script>
+	<script src="js/jquery.min.js"></script>
+	<script src="js/libs.js"></script>
+	<script src="js/common.js"></script>
 </body>
 
 </html>
