--- a/src/__automatic-catalog.html
+++ b/src/__automatic-catalog.html
@@ -3,52 +3,55 @@
 	"pageClass": "ea-site ea-has-catalog-menu"
 })
 
-<!--HEADER-->
-@@include('_layout_header--ea.tpl', {
-	"mainNavItemActive": "Производство"
-})
-<!--HEADER end-->
+<div class="wrapper">
+	<!--HEADER-->
+	@@include('_layout_header--ea.tpl', {
+		"mainNavItemActive": "Производство"
+	})
+	<!--HEADER end-->
 
-<!--TOP PANEL-->
-@@include('_layout_top-panel--ea.tpl')
-<!--TOP PANEL end-->
+	<!--TOP PANEL-->
+	@@include('_layout_top-panel--ea.tpl')
+	<!--TOP PANEL end-->
 
-<!--MAIN-->
-<div class="main">
-	<div class="max-wrap layout">
-		<div class="main__holder">
-			<!--CONTENT-->
-			<div class="content-wrap">
-				<div class="content user-content">
-					<div class="sheet">
-						<div class="layout-article">
-							<!--breadcrumbs-->
-							@@include('_breadcrumbs.tpl')
-							<!--breadcrumbs end-->
-							<h1>Кабельно-проводниковая продукция и кабеленесущие системы</h1>
-							<div class="layout-wide">
-								<!--catalog-->
-								<div class="catalog grid-view-activated">
-									<section class="catalog__list">
-										@@loop("_catalog-items.tpl", "includes-json/catalog-items.json")
-									</section>
+	<!--MAIN-->
+	<div class="main">
+		<div class="max-wrap layout">
+			<div class="main__holder">
+				<!--CONTENT-->
+				<div class="content-wrap">
+					<div class="content user-content">
+						<div class="sheet">
+							<div class="layout-article">
+								<!--breadcrumbs-->
+								@@include('_breadcrumbs.tpl')
+								<!--breadcrumbs end-->
+								<h1>Кабельно-проводниковая продукция и кабеленесущие системы</h1>
+								<div class="layout-wide">
+									<!--catalog-->
+									<div class="catalog grid-view-activated">
+										<section class="catalog__list">
+											@@loop("_catalog-items.tpl", "includes-json/catalog-items.json")
+										</section>
+									</div>
+									<!--catalog end-->
 								</div>
-								<!--catalog end-->
 							</div>
 						</div>
 					</div>
 				</div>
+				<!--CONTENT end-->
 			</div>
-			<!--CONTENT end-->
 		</div>
 	</div>
-</div>
-<!--MAIN end-->
+	<!--MAIN end-->
 
-<!--SIDEBAR-->
-@@include('_layout_catalog-menu.tpl', {
-	"catalogMenuActiveItem": "Кабельно-проводниковая продукция и кабеленесущие системы"
-})
-<!--SIDEBAR-->
+	<!--SIDEBAR-->
+	@@include('_layout_catalog-menu.tpl', {
+		"catalogMenuActiveItem": "Кабельно-проводниковая продукция и кабеленесущие системы",
+		"notSubMenu": ""
+	})
+	<!--SIDEBAR-->
+</div>
 
 @@include('_layout_foot.tpl')
