--- a/src/__automatic-news.html
+++ b/src/__automatic-news.html
@@ -1,66 +1,69 @@
 @@include('_layout_head.tpl', {
 	"title": "ЭA - Новости",
-	"pageClass": "ea-site ea-has-catalog-menu"
+	"pageClass": "ea-site"
 })
 
-<!--HEADER-->
-@@include('_layout_header--ea.tpl', {
-	"mainNavItemActive": "Заказ"
-})
-<!--HEADER end-->
+<div class="wrapper">
+	<!--HEADER-->
+	@@include('_layout_header--ea.tpl', {
+		"mainNavItemActive": "Заказ"
+	})
+	<!--HEADER end-->
 
-<!--TOP PANEL-->
-@@include('_layout_top-panel--ea.tpl')
-<!--TOP PANEL end-->
+	<!--TOP PANEL-->
+	@@include('_layout_top-panel--ea.tpl')
+	<!--TOP PANEL end-->
 
-<!--MAIN-->
-<div class="main">
-	<div class="max-wrap layout">
-		<div class="main__holder">
-			<!--CONTENT-->
-			<div class="content-wrap">
-				<div class="content user-content">
-					<div class="sheet">
-						<div class="layout-article">
-							<!--breadcrumbs-->
-							@@include('_breadcrumbs.tpl')
-							<!--breadcrumbs end-->
-							<div class="heading">
-								<h1>Новости</h1>
-								<!--years-->
-								<div class="years">
-									<a href="#">Все</a>
-									<a href="#" class="active">2017</a>
-									<a href="#">2016</a>
-									<a href="#">2015</a>
-									<a href="#">2014</a>
+	<!--MAIN-->
+	<div class="main">
+		<div class="max-wrap layout">
+			<div class="main__holder">
+				<!--CONTENT-->
+				<div class="content-wrap">
+					<div class="content user-content">
+						<div class="sheet">
+							<div class="layout-article">
+								<!--breadcrumbs-->
+								@@include('_breadcrumbs.tpl')
+								<!--breadcrumbs end-->
+								<div class="heading">
+									<h1>Новости</h1>
+									<!--years-->
+									<div class="years">
+										<a href="#">Все</a>
+										<a href="#" class="active">2017</a>
+										<a href="#">2016</a>
+										<a href="#">2015</a>
+										<a href="#">2014</a>
+									</div>
+									<!--years end-->
 								</div>
-								<!--years end-->
-							</div>
-							<div class="layout-wide">
-								<!--news-->
-								<div class="news">
-									<section class="news__list">
-										@@loop("_tpl_news-items.xhtml", "includes-json/_tpl_news-items.json")
-									</section>
+								<div class="layout-wide">
+									<!--news-->
+									<div class="news">
+										<section class="news__list">
+											@@loop("_tpl_news-items.xhtml", "includes-json/_tpl_news-items.json")
+										</section>
+									</div>
+									<!--news end-->
+									<a href="#" class="btn-more btn-with-icon"><i class="depict-cart">&nbsp;</i><span>Загрузить еще</span></a>
 								</div>
-								<!--news end-->
-								<a href="#" class="btn-more btn-with-icon"><i class="depict-cart">&nbsp;</i><span>Загрузить еще</span></a>
 							</div>
 						</div>
 					</div>
 				</div>
+				<!--CONTENT end-->
 			</div>
-			<!--CONTENT end-->
 		</div>
 	</div>
-</div>
-<!--MAIN end-->
+	<!--MAIN end-->
 
-<!--SIDEBAR-->
-@@include('_layout_catalog-menu.tpl', {
-	"catalogMenuActiveItem": "Кабельно-проводниковая продукция и кабеленесущие системы"
-})
-<!--SIDEBAR-->
+	<!--SIDEBAR-->
+	@@include('_layout_catalog-menu.tpl', {
+		"catalogMenuActiveItem": "Кабельно-проводниковая продукция и кабеленесущие системы",
+		"notSubMenu": "true"
+	})
+	<!--SIDEBAR-->
+</div>
 
 @@include('_layout_foot.tpl')
