--- a/src/__automatic-products.html
+++ b/src/__automatic-products.html
@@ -3,61 +3,63 @@
 	"pageClass": "ea-site ea-has-catalog-menu"
 })
 
-<!--HEADER-->
-@@include('_layout_header--ea.tpl', {
-	"mainNavItemActive": "Монтажные работы"
-})
-<!--HEADER end-->
+<div class="wrapper">
+	<!--HEADER-->
+	@@include('_layout_header--ea.tpl', {
+		"mainNavItemActive": "Монтажные работы"
+	})
+	<!--HEADER end-->
 
-<!--TOP PANEL-->
-@@include('_layout_top-panel--ea.tpl')
-<!--TOP PANEL end-->
+	<!--TOP PANEL-->
+	@@include('_layout_top-panel--ea.tpl')
+	<!--TOP PANEL end-->
 
-<!--MAIN-->
-<div class="main">
-	<div class="max-wrap layout">
-		<div class="main__holder">
-			<!--CONTENT-->
-			<div class="content-wrap">
-				<div class="content user-content">
-					<div class="sheet">
-						<div class="layout-article">
-							<!--breadcrumbs-->
-							@@include('_breadcrumbs.tpl')
-							<!--breadcrumbs end-->
-							<h1>2Кабель силовой бронированный АВБбШв и ААБл</h1>
-							<!--filters-->
-							@@include('_tpl_products-filters.xhtml')
-							<!--filters end-->
-							<!--options panel-->
-							@@include('_tpl_products-options.xhtml')
-							<!--options panel end-->
-							<div class="layout-wide">
-								<!--products-->
-								<div class="products view-container-js">
-									<section class="products__list">
-										@@loop("_products-items.tpl", "includes-json/products-items.json")
-									</section>
+	<!--MAIN-->
+	<div class="main">
+		<div class="max-wrap layout">
+			<div class="main__holder">
+				<!--CONTENT-->
+				<div class="content-wrap">
+					<div class="content user-content">
+						<div class="sheet">
+							<div class="layout-article">
+								<!--breadcrumbs-->
+								@@include('_breadcrumbs.tpl')
+								<!--breadcrumbs end-->
+								<h1>2Кабель силовой бронированный АВБбШв и ААБл</h1>
+								<!--filters-->
+								@@include('_tpl_products-filters.xhtml')
+								<!--filters end-->
+								<!--options panel-->
+								@@include('_tpl_products-options.xhtml')
+								<!--options panel end-->
+								<div class="layout-wide">
+									<!--products-->
+									<div class="products view-container-js">
+										<section class="products__list">
+											@@loop("_products-items.tpl", "includes-json/products-items.json")
+										</section>
+									</div>
+									<!--products end-->
+									<!--pagination-->
+									@@include('_tpl_pagination-2.xhtml')
+									<!--pagination end-->
 								</div>
-								<!--products end-->
-								<!--pagination-->
-								@@include('_tpl_pagination-2.xhtml')
-								<!--pagination end-->
 							</div>
 						</div>
 					</div>
 				</div>
+				<!--CONTENT end-->
 			</div>
-			<!--CONTENT end-->
 		</div>
 	</div>
-</div>
-<!--MAIN end-->
+	<!--MAIN end-->
 
-<!--SIDEBAR-->
-@@include('_layout_catalog-menu.tpl', {
-	"catalogMenuActiveItem": "Кабельно-проводниковая продукция и кабеленесущие системы"
-})
-<!--SIDEBAR-->
+	<!--SIDEBAR-->
+	@@include('_layout_catalog-menu.tpl', {
+		"catalogMenuActiveItem": "Кабельно-проводниковая продукция и кабеленесущие системы"
+	})
+	<!--SIDEBAR-->
+</div>
 
 @@include('_layout_foot.tpl')
