--- a/src/__map-site.html
+++ b/src/__map-site.html
@@ -3,51 +3,53 @@
 	"pageClass": "ea-site ea-catalog-page ea-has-catalog-menu"
 })
 
-<!--HEADER-->
-@@include('_layout_header--ea.tpl', {
-	"mainNavItemActive": "Заказ"
-})
-<!--HEADER end-->
+<div class="wrapper">
+	<!--HEADER-->
+	@@include('_layout_header--ea.tpl', {
+		"mainNavItemActive": "Заказ"
+	})
+	<!--HEADER end-->
 
-<!--TOP PANEL-->
-@@include('_layout_top-panel--ea.tpl')
-<!--TOP PANEL end-->
+	<!--TOP PANEL-->
+	@@include('_layout_top-panel--ea.tpl')
+	<!--TOP PANEL end-->
 
-<!--MAIN-->
-<div class="main">
-	<div class="max-wrap layout">
-		<div class="main__holder">
-			<!--CONTENT-->
-			<div class="content-wrap">
-				<div class="content user-content">
-					<div class="sheet">
-						<div class="layout-article">
-							<!--breadcrumbs-->
-							@@include('_breadcrumbs.tpl')
-							<!--breadcrumbs end-->
-							<h1>Карта сайта</h1>
-							<div class="layout-wide">
-								<!--map site-->
-								@@include('_catalog-menu-list.tpl', {
-									"catalogMenuActiveItem": "",
-									"classKey": "map-site"
-								})
-								<!--map site end-->
+	<!--MAIN-->
+	<div class="main">
+		<div class="max-wrap layout">
+			<div class="main__holder">
+				<!--CONTENT-->
+				<div class="content-wrap">
+					<div class="content user-content">
+						<div class="sheet">
+							<div class="layout-article">
+								<!--breadcrumbs-->
+								@@include('_breadcrumbs.tpl')
+								<!--breadcrumbs end-->
+								<h1>Карта сайта</h1>
+								<div class="layout-wide">
+									<!--map site-->
+									@@include('_catalog-menu-list.tpl', {
+										"catalogMenuActiveItem": "",
+										"classKey": "map-site"
+									})
+									<!--map site end-->
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
+				<!--CONTENT end-->
 			</div>
-			<!--CONTENT end-->
 		</div>
 	</div>
-</div>
-<!--MAIN end-->
+	<!--MAIN end-->
 
-<!--SIDEBAR-->
-@@include('_layout_catalog-menu.tpl', {
-	"catalogMenuActiveItem": "Кабельно-проводниковая продукция и кабеленесущие системы"
-})
-<!--SIDEBAR-->
+	<!--SIDEBAR-->
+	@@include('_layout_catalog-menu.tpl', {
+		"catalogMenuActiveItem": "Кабельно-проводниковая продукция и кабеленесущие системы"
+	})
+	<!--SIDEBAR-->
+</div>
 
 @@include('_layout_foot.tpl')
