--- a/src/__automatic-news.html
+++ b/src/__automatic-news.html
@@ -60,7 +60,7 @@
 
 	<!--SIDEBAR-->
 	@@include('_layout_catalog-menu.tpl', {
-		"catalogMenuActiveItem": "Кабельно-проводниковая продукция и кабеленесущие системы",
+		"catalogMenuActiveItem": "",
 		"notSubMenu": "true"
 	})
 	<!--SIDEBAR-->
