--- a/src/_tpl_news-items.xhtml
+++ b/src/_tpl_news-items.xhtml
@@ -1,5 +1,5 @@
 <article class="news__item">
-	<a href="typography.html" class="news__inner">
+	<a href="automatic-news-inner.html" class="news__inner">
 		@@if (context.src) {
 		<div class="news__figure">
 			<div class="news__img">
