--- a/src/__automatic-catalog.html
+++ b/src/__automatic-catalog.html
@@ -26,7 +26,9 @@
 								<!--breadcrumbs-->
 								@@include('_breadcrumbs.tpl')
 								<!--breadcrumbs end-->
-								<h1>Кабельно-проводниковая продукция и кабеленесущие системы</h1>
+								<div class="heading">
+									<h1>Кабельно-проводниковая продукция и кабеленесущие системы</h1>
+								</div>
 								<div class="layout-wide">
 									<!--catalog-->
 									<div class="catalog grid-view-activated">
