--- a/src/automatic-catalog.html
+++ b/src/automatic-catalog.html
@@ -267,7 +267,9 @@
 										</ul>
 									</div>
 									<!--breadcrumbs end-->
-									<h1>Кабельно-проводниковая продукция и кабеленесущие системы</h1>
+									<div class="heading">
+										<h1>Кабельно-проводниковая продукция и кабеленесущие системы</h1>
+									</div>
 									<div class="layout-wide">
 										<!--catalog-->
 										<div class="catalog grid-view-activated">
