--- a/src/typography.html
+++ b/src/typography.html
@@ -36,7 +36,7 @@
 	<script src="js/modernizr.min.js"></script>
 </head>
 
-<body>
+<body class="ea-site">
 	<!--[if lt IE 9]> <div class="browserupgrade"><p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p></div> <![endif]-->
 	<!-- >>> head.tpl END <<< -->
 	<div class="wrapper">
@@ -626,6 +626,18 @@
 											<input class="btn-default" type="submit" value="Type submit">
 											<input class="btn-default" type="button" value="Type button">
 											<input class="btn-default" type="reset" value="Type reset">
+										</div>
+									</div>
+									<!--style default button-->
+									<h4><span class="mark"></span><a href="#hashButtonsOutline" id="hashButtonsOutline" class="hashAnchor"><span class="mark">Кнопки с обводкой</span></a></h4>
+									<div class="layout-text">
+										<div style="padding: 0 0 20px;">
+											<a href="#" class="btn-outline">Link</a>
+										</div>
+										<div style="padding: 0 0 20px;">
+											<input class="btn-outline" type="submit" value="Type submit">
+											<input class="btn-outline" type="button" value="Type button">
+											<input class="btn-outline" type="reset" value="Type reset">
 										</div>
 									</div>
 									<h4><span class="mark"></span><a href="#hashButtonsAlt" id="hashButtonsAlt" class="hashAnchor"><span class="mark">Альтернативные кнопки</span></a></h4>
@@ -1406,6 +1418,7 @@
 											</a>
 										</div>
 									</div>
+									<h3 style="margin-bottom: 0;"><a style="position: absolute; left: -9999px;" href="#hashArticleFooter" id="hashArticleFooter" class="hashAnchor"><span class="mark">Футер статьи</span></a></h3>
 									<div class="article-footer">
 										<div class="layout-text">
 											<div class="share-box">
