--- a/src/404.html
+++ b/src/404.html
@@ -181,7 +181,9 @@
 						<!--CONTENT-->
 						<div class="content-wrap">
 							<div class="content user-content">
-								<h1>Page Not Found</h1>
+								<div class="heading">
+									<h1>Page Not Found</h1>
+								</div>
 								<p>Sorry, but the page you were trying to view does not exist.</p>
 							</div>
 						</div>
