--- a/src/__index.html
+++ b/src/__index.html
@@ -6,7 +6,7 @@
 <div class="wrapper">
 	<!--HEADER-->
 	@@include('_layout_header.tpl', {
-		"mainNavItemActive": "Производство"
+		"mainNavItemActive": ""
 	})
 	<!--HEADER end-->
 
