--- a/src/index.html
+++ b/src/index.html
@@ -129,7 +129,7 @@
 									</li>
 									<!--nav item end-->
 									<!--nav item start-->
-									<li class="current">
+									<li class="">
 										<a href="automatic-catalog.html"><span>Производство</span></a>
 									</li>
 									<!--nav item end-->
@@ -211,7 +211,7 @@
 			</div>
 			-->
 				</div>
-				<a href="#" class="btn-siblings"><i>&nbsp;</i><span>Электрощитовое <br> оборудование</span></a>
+				<a href="#" class="btn-siblings"><i>&nbsp;</i><span>Электро<br> автоматика</span></a>
 			</div>
 		</aside>
 		<!--TOP PANEL end-->
