--- a/src/automatic-news.html
+++ b/src/automatic-news.html
@@ -417,8 +417,8 @@
 		</div>
 		<!--MAIN end-->
 		<!--SIDEBAR-->
-		<aside class="catalog-menu js-tabs catalog-menu-popup-js">
-			<div class="catalog-categories">
+		<aside class="catalog-menu js-tabs catalog-menu-popup-js menu-events-js">
+			<div class="catalog-categories catalog-categories-js">
 				<div class="catalog-categories__holder">
 					<div class="catalog-categories__row">
 						<div class="catalog-categories__item">
@@ -441,9 +441,7 @@
 									<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 40 40" enable-background="new 0 0 40 40">
 								<g>
 									<g>
-										<g>
-											<path d="M29.8,20.8h5.9v-1.4h-5.9V20.8z M29.8,18.8h5.9v-1.4h-5.9V18.8z M20,30.7c-0.3-0.3-0.7-0.3-1,0s-0.3,0.7,0,1l7.9,7.9     c0.1,0.1,0.3,0.2,0.5,0.2s0.4-0.1,0.5-0.2c0.3-0.3,0.3-0.7,0-1L20,30.7z M32.9,0.4l-0.1,0c-4,0-7.2,3.2-7.2,7.2     c0,2.1,0.9,4.1,2.5,5.5c0.8,0.7,1.3,1.7,1.3,2.6v1h6.9v-1.1c0-0.9,0.4-1.8,1.2-2.4c1.7-1.4,2.6-3.5,2.6-5.8     C39.9,3.6,36.7,0.5,32.9,0.4z M36.5,12.1c-1,0.8-1.6,2-1.7,3.2h-1.1L32.2,7L33,7.2c0.2,0.1,0.4,0.1,0.6-0.1l1.5-0.9l-0.7-1.2     l-1.2,0.7l-1.7-0.6c-0.2-0.1-0.5,0-0.7,0.1c-0.2,0.2-0.3,0.4-0.2,0.7l1.8,9.3h-1.7c-0.1-1.2-0.7-2.4-1.8-3.3     c-1.3-1.1-2-2.7-2-4.4c0-3.2,2.6-5.8,5.9-5.8h0c3.1,0,5.6,2.6,5.7,5.6C38.7,9.2,37.9,10.9,36.5,12.1z M17,33.9     c-0.2-0.3-0.6-0.5-0.9-0.3c-0.3,0.2-0.5,0.6-0.3,0.9l2.1,4.4c0.1,0.3,0.4,0.4,0.6,0.4c0.1,0,0.2,0,0.3-0.1     c0.3-0.2,0.5-0.6,0.3-0.9L17,33.9z M11.7,12.6V0.3h-1.4v13.5l-0.5,0.5l-2.6-2.6L0,18.8l2.6,2.6l-1.7,1.7l8.8,13.3l15.1-15.1     L11.7,12.6z M11.7,22.6v-1.2c0.1,0.1,0.2,0.1,0.2,0.2c0.5,0.5,0.5,1.4,0,1.9c-0.5,0.5-1.4,0.5-1.9,0c-0.3-0.3-0.4-0.6-0.4-1     s0.1-0.7,0.4-1c0.1-0.1,0.2-0.1,0.3-0.2v1.2H11.7z M2,18.8l5.2-5.2l1.6,1.6l-5.2,5.2L2,18.8z M2.7,23.4l7.6-7.6V20     c-0.5,0.1-0.9,0.3-1.3,0.7c-0.5,0.5-0.8,1.2-0.8,2s0.3,1.4,0.8,2c0.5,0.5,1.2,0.8,2,0.8s1.4-0.3,2-0.8c1.1-1.1,1.1-2.8,0-3.9     c-0.3-0.3-0.8-0.6-1.2-0.7v-5.6l0,0l9.1,6L8.7,32.5L2.7,23.4z M9.5,33.7L22,21.2l0.7,0.4L9.9,34.3L9.5,33.7z M21.9,27.8     c-0.2,0.3,0,0.8,0.3,0.9l4.4,2.1c0.1,0,0.2,0.1,0.3,0.1c0.3,0,0.5-0.1,0.6-0.4c0.2-0.3,0-0.8-0.3-0.9l-4.4-2.1     C22.5,27.3,22.1,27.4,21.9,27.8z"></path>
-										</g>
+										<path d="M29.8,20.8h5.9v-1.4h-5.9V20.8z M29.8,18.8h5.9v-1.4h-5.9V18.8z M20,30.7c-0.3-0.3-0.7-0.3-1,0s-0.3,0.7,0,1l7.9,7.9     c0.1,0.1,0.3,0.2,0.5,0.2s0.4-0.1,0.5-0.2c0.3-0.3,0.3-0.7,0-1L20,30.7z M32.9,0.4l-0.1,0c-4,0-7.2,3.2-7.2,7.2     c0,2.1,0.9,4.1,2.5,5.5c0.8,0.7,1.3,1.7,1.3,2.6v1h6.9v-1.1c0-0.9,0.4-1.8,1.2-2.4c1.7-1.4,2.6-3.5,2.6-5.8     C39.9,3.6,36.7,0.5,32.9,0.4z M36.5,12.1c-1,0.8-1.6,2-1.7,3.2h-1.1L32.2,7L33,7.2c0.2,0.1,0.4,0.1,0.6-0.1l1.5-0.9l-0.7-1.2     l-1.2,0.7l-1.7-0.6c-0.2-0.1-0.5,0-0.7,0.1c-0.2,0.2-0.3,0.4-0.2,0.7l1.8,9.3h-1.7c-0.1-1.2-0.7-2.4-1.8-3.3     c-1.3-1.1-2-2.7-2-4.4c0-3.2,2.6-5.8,5.9-5.8h0c3.1,0,5.6,2.6,5.7,5.6C38.7,9.2,37.9,10.9,36.5,12.1z M17,33.9     c-0.2-0.3-0.6-0.5-0.9-0.3c-0.3,0.2-0.5,0.6-0.3,0.9l2.1,4.4c0.1,0.3,0.4,0.4,0.6,0.4c0.1,0,0.2,0,0.3-0.1     c0.3-0.2,0.5-0.6,0.3-0.9L17,33.9z M11.7,12.6V0.3h-1.4v13.5l-0.5,0.5l-2.6-2.6L0,18.8l2.6,2.6l-1.7,1.7l8.8,13.3l15.1-15.1     L11.7,12.6z M11.7,22.6v-1.2c0.1,0.1,0.2,0.1,0.2,0.2c0.5,0.5,0.5,1.4,0,1.9c-0.5,0.5-1.4,0.5-1.9,0c-0.3-0.3-0.4-0.6-0.4-1     s0.1-0.7,0.4-1c0.1-0.1,0.2-0.1,0.3-0.2v1.2H11.7z M2,18.8l5.2-5.2l1.6,1.6l-5.2,5.2L2,18.8z M2.7,23.4l7.6-7.6V20     c-0.5,0.1-0.9,0.3-1.3,0.7c-0.5,0.5-0.8,1.2-0.8,2s0.3,1.4,0.8,2c0.5,0.5,1.2,0.8,2,0.8s1.4-0.3,2-0.8c1.1-1.1,1.1-2.8,0-3.9     c-0.3-0.3-0.8-0.6-1.2-0.7v-5.6l0,0l9.1,6L8.7,32.5L2.7,23.4z M9.5,33.7L22,21.2l0.7,0.4L9.9,34.3L9.5,33.7z M21.9,27.8     c-0.2,0.3,0,0.8,0.3,0.9l4.4,2.1c0.1,0,0.2,0.1,0.3,0.1c0.3,0,0.5-0.1,0.6-0.4c0.2-0.3,0-0.8-0.3-0.9l-4.4-2.1     C22.5,27.3,22.1,27.4,21.9,27.8z"></path>
 									</g>
 								</g>
 							</svg>
@@ -552,7 +550,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="catalog-menu-layout">
+			<div class="catalog-menu-layout submenu-events-js">
 				<div class="catalog-menu-title">
 					<a href="#" class="btn-popup-close btn-catalog-menu-close btn-catalog-close-js"><i></i><span>Закрыть</span></a>
 					<span>Каталог</span>
