--- a/src/typography.html
+++ b/src/typography.html
@@ -211,7 +211,7 @@
 			</div>
 			-->
 				</div>
-				<a href="#" class="btn-siblings"><i>&nbsp;</i><span>Электрощитовое <br> оборудование</span></a>
+				<a href="#" class="btn-siblings"><i>&nbsp;</i><span>Электро<br> автоматика</span></a>
 			</div>
 		</aside>
 		<!--TOP PANEL end-->
