--- a/src/automatic-news-inner.html
+++ b/src/automatic-news-inner.html
@@ -41,7 +41,7 @@
 	<!-- >>> head.tpl END <<< -->
 	<div class="wrapper">
 		<!--HEADER-->
-		<!--HEADER-->
+		<!--header-->
 		<header class="header">
 			<div class="header__align">
 				<div class="header__holder">
@@ -59,13 +59,13 @@
 					<div class="header__row">
 						<div class="header__cell">
 							<div class="user-options">
-								<a href="#" class="user-options__item menu-btn btn-menu-js" title="Открыть главное меню">
+								<a href="#" class="user-options__item menu-btn btn-nav-js" title="Открыть главное меню">
 									<div class="menu-btn__inner">
 										<span>Меню</span>
 										<i>&nbsp;</i>
 									</div>
 								</a>
-								<a href="#" class="user-options__item">
+								<a href="#" class="user-options__item btn-search-popup-js">
 									<div class="user-option__icon">
 										<span>Поиск</span>
 										<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 551.7 548.4" enable-background="new 0 0 551.7 548.4"> <path d="M353.9,374.2l-12,4.6c-1.2,0.4-3,1.1-5.1,2.5c-0.6,0.4-1.2,0.9-1.9,1.3c-0.6,0.4-1.2,0.8-1.8,1.2  c-38.7,26.4-79.2,39.8-120.2,39.8c-18.3,0-37-2.7-55.7-7.9c-42.1-11.8-76.4-32-101.9-59.9c-25.2-27.6-42.7-63.8-52-107.4  c-1.1-5-1.7-10.4-2.4-16.1c-0.3-2.4-0.6-4.8-0.9-7.2v-25.5c0.3-1.4,0.7-3.2,0.8-5.4c2.3-27.7,9.7-53.9,22-77.9  C59.9,44.6,131.8,0,210.5,0c31.4,0,61.9,7,90.8,20.9c74,35.5,114.4,96.3,120.3,180.9c3.1,44.2-8.9,87.1-35.5,127.5  c-0.9,1.3-1.6,2.6-2.3,3.7c-0.3,0.4-0.5,0.9-0.8,1.3l-8.1,13.1l10.5,11.2l0.7,0.7c0.6,0.7,1.1,1.2,1.7,1.8  c54.6,54.6,109.2,109.2,163.8,163.8c-7.8,7.8-15.6,15.7-23.6,23.6L353.9,374.2z M211.5,33.4c-98.1,0-178.2,79.8-178.4,178  c-0.1,47.6,18.4,92.5,52.1,126.3c33.8,33.9,78.6,52.5,126.3,52.6c98.3,0,178.3-80,178.4-178.3c0.1-98.3-79.8-178.4-178.1-178.5  H211.5z"></path> </svg>
@@ -101,7 +101,7 @@
 				</div>
 			</div>
 		</header>
-		<!--HEADER end-->
+		<!--header end-->
 		<!--NAVIGATION-->
 		<aside class="nav-wrap nav-popup-js">
 			<div class="nav-wrap__align">
@@ -172,6 +172,57 @@
 			</div>
 		</aside>
 		<!--NAVIGATION end-->
+		<!--NAVIGATION-->
+		<aside class="nav-wrap search-popup-js">
+			<div class="nav-wrap__align">
+				<div class="nav-wrap__holder">
+					<div class="nav-wrap__row">
+						<div class="nav-wrap__cell">
+							<header class="nav-title">
+								<a href="#" class="btn-popup-close btn-nav-close btn-nav-close-js"><i></i><span>Закрыть</span></a>
+								<a href="index.html" class="logo-nav">
+									<div class="logo-nav__img"><span>Электроавтоматика</span></div>
+									<span class="logo-nav__title">Интернет-магазин</span>
+								</a>
+							</header>
+						</div>
+					</div>
+					<div class="nav-wrap__row">
+						<div class="nav-wrap__cell">
+							<!-- search form -->
+							<div class="search-form">
+								<form action="#" method="post">
+									<div class="search-form__field js-field-effects">
+										<input class="search-form__input" type="search" id="search-form-field" placeholder="Поиск">
+										<!--
+								<div class="search-form__label">
+									<label for="search-form-field"> <span>...</span></label>
+								</div>
+								-->
+										<div class="search-form__btn">
+											<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="30.6 44.1 550.8 550.8" enable-background="new 30.6 44.1 550.8 550.8"> <path d="M570.4,531L459.9,420.4c67.4-92.7,59.2-223.3-24.4-306.9c-46.3-46.3-107-69.5-167.7-69.5s-121.4,23.2-167.7,69.5  c-92.6,92.6-92.6,242.8,0,335.4c46.3,46.3,107,69.5,167.7,69.5c48.9,0,97.8-15,139.1-45.1l110.5,110.5c7.3,7.3,16.9,11,26.5,11  c9.6,0,19.2-3.7,26.5-11C585.1,569.3,585.1,545.6,570.4,531z M398.4,411.9c-34.9,34.9-81.3,54.1-130.6,54.1  c-49.4,0-95.7-19.2-130.6-54.1c-72-72-72-189.3,0-261.3c34.9-34.9,81.3-54.1,130.6-54.1s95.8,19.2,130.6,54.1  C470.5,222.7,470.5,339.9,398.4,411.9z"/> </svg>
+											<span>Искать</span>
+											<input type="submit" value="">
+										</div>
+									</div>
+								</form>
+							</div>
+							<!--search form end-->
+						</div>
+					</div>
+					<div class="nav-wrap__row">
+						<div class="nav-wrap__cell">
+							<footer class="nav-footer">
+								<a href="#" class="btn-siblings"><i>&nbsp;</i><span>Электрощитовое <br> оборудование</span></a>
+								<div class="copyright">&copy; 2017 ОАО Электроавтоматика</div>
+								<div class="map-site"><a href="map-site.html" title="Перейти на карту сайта">Карта сайта</a></div>
+							</footer>
+						</div>
+					</div>
+				</div>
+			</div>
+		</aside>
+		<!--NAVIGATION end-->
 		<!--HEADER end-->
 		<!--TOP PANEL-->
 		<aside class="top-panel">
@@ -187,7 +238,7 @@
 					</a>
 					<img style="display: none;" src="img/logo.png" alt="Электроавтоматика">
 				</div>
-				<a href="#" class="menu-btn btn-menu-js" title="Открыть главное меню">
+				<a href="#" class="menu-btn btn-nav-js" title="Открыть главное меню">
 					<div class="menu-btn__inner">
 						<span>Меню</span>
 						<i>&nbsp;</i>
@@ -218,13 +269,13 @@
 			-->
 				</div>
 				<div class="user-options">
-					<a href="#" class="user-options__item menu-btn btn-menu-js" title="Открыть главное меню">
+					<a href="#" class="user-options__item menu-btn btn-nav-js" title="Открыть главное меню">
 						<div class="menu-btn__inner">
 							<span>Меню</span>
 							<i>&nbsp;</i>
 						</div>
 					</a>
-					<a href="#" class="user-options__item">
+					<a href="#" class="user-options__item btn-search-popup-js">
 						<div class="user-option__icon">
 							<span>Поиск</span>
 							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 551.7 548.4" enable-background="new 0 0 551.7 548.4"> <path d="M353.9,374.2l-12,4.6c-1.2,0.4-3,1.1-5.1,2.5c-0.6,0.4-1.2,0.9-1.9,1.3c-0.6,0.4-1.2,0.8-1.8,1.2  c-38.7,26.4-79.2,39.8-120.2,39.8c-18.3,0-37-2.7-55.7-7.9c-42.1-11.8-76.4-32-101.9-59.9c-25.2-27.6-42.7-63.8-52-107.4  c-1.1-5-1.7-10.4-2.4-16.1c-0.3-2.4-0.6-4.8-0.9-7.2v-25.5c0.3-1.4,0.7-3.2,0.8-5.4c2.3-27.7,9.7-53.9,22-77.9  C59.9,44.6,131.8,0,210.5,0c31.4,0,61.9,7,90.8,20.9c74,35.5,114.4,96.3,120.3,180.9c3.1,44.2-8.9,87.1-35.5,127.5  c-0.9,1.3-1.6,2.6-2.3,3.7c-0.3,0.4-0.5,0.9-0.8,1.3l-8.1,13.1l10.5,11.2l0.7,0.7c0.6,0.7,1.1,1.2,1.7,1.8  c54.6,54.6,109.2,109.2,163.8,163.8c-7.8,7.8-15.6,15.7-23.6,23.6L353.9,374.2z M211.5,33.4c-98.1,0-178.2,79.8-178.4,178  c-0.1,47.6,18.4,92.5,52.1,126.3c33.8,33.9,78.6,52.5,126.3,52.6c98.3,0,178.3-80,178.4-178.3c0.1-98.3-79.8-178.4-178.1-178.5  H211.5z"></path> </svg>
@@ -279,18 +330,22 @@
 										</div>
 									</div>
 									<p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях.</p>
+									<h2>Несколько абзацев более менее осмысленного текста рыбы на русском языке</h2>
 									<p>При создании генератора мы использовали небезызвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового
 										восприятия. Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При
 										создании генератора мы использовали небезызвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового
 										восприятия.</p>
+									<h3>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев</h3>
 									<p>По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых клиентов недоумение при попытках прочитать рыбу текст.</p>
-									<p>В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом и придаст неповторимый колорит советских времен. Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее
-										осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезызвестный универсальный код речей. Текст генерируется абзацами случайным
-										образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия. По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых
-										клиентов недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом и придаст неповторимый колорит советских времен. Сайт рыбатекст поможет дизайнеру, верстальщику,
-										вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезызвестный универсальный
-										код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия. По своей сути рыбатекст является альтернативой традиционному
-										lorem ipsum, который вызывает у некторых клиентов недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом и придаст неповторимый колорит советских времен.</p>
+									<p>В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом и придаст неповторимый колорит советских времен.</p>
+									<h4>При создании генератора мы использовали небезызвестный универсальный код речей</h4>
+									<p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора
+										мы использовали небезызвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия. По своей
+										сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых клиентов недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом
+										и придаст неповторимый колорит советских времен. Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных
+										выступлений в домашних условиях. При создании генератора мы использовали небезызвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным
+										и живым для визуально-слухового восприятия. По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых клиентов недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на
+										русском языке наполнит любой макет непонятным смыслом и придаст неповторимый колорит советских времен.</p>
 									<div class="article-footer">
 										<div class="layout-text">
 											<div class="share-box">
