--- a/src/__404.html
+++ b/src/__404.html
@@ -6,7 +6,7 @@
 <div class="wrapper">
 	<div class="wrapper">
 		<!--HEADER-->
-		@@include('_layout_header.tpl', {
+		@@include('_layout_header.xhtml', {
 			"mainNavItemActive": "Типографика"
 		})
 		<!--HEADER end-->
