--- a/src/__typography.html
+++ b/src/__typography.html
@@ -5,7 +5,7 @@
 
 <div class="wrapper">
 	<!--HEADER-->
-	@@include('_layout_header.tpl', {
+	@@include('_layout_header.xhtml', {
 		"mainNavItemActive": "О компании"
 	})
 	<!--HEADER end-->
