--- a/src/_layout_header.xhtml
+++ b/src/_layout_header.xhtml
@@ -36,12 +36,12 @@
 <!--HEADER end-->
 
 <!--NAVIGATION-->
-<aside class="nav-wrap nav-popup-js">
-	<div class="nav-wrap__align">
-		<div class="nav-wrap__holder">
-			<div class="nav-wrap__row">
-				<div class="nav-wrap__cell">
-					<header class="nav-title">
+<aside class="shutter nav-popup-js">
+	<div class="shutter__align">
+		<div class="shutter__holder">
+			<div class="shutter__row">
+				<div class="shutter__cell">
+					<header class="shutter-header">
 						<a href="index.html" class="logo-nav">
 							<div class="logo-nav__img"><span>ДВЭМЗ</span></div>
 							<span class="logo-nav__title">Электрощитовое оборудование</span>
@@ -49,8 +49,8 @@
 					</header>
 				</div>
 			</div>
-			<div class="nav-wrap__row">
-				<div class="nav-wrap__cell">
+			<div class="shutter__row">
+				<div class="shutter__cell">
 					<nav class="nav">
 						@@include('_navigation-list.tpl', {
 							"mainNavItemActive": "@@mainNavItemActive",
@@ -59,9 +59,9 @@
 					</nav>
 				</div>
 			</div>
-			<div class="nav-wrap__row">
-				<div class="nav-wrap__cell">
-					<footer class="nav-footer">
+			<div class="shutter__row">
+				<div class="shutter__cell">
+					<footer class="shutter-footer">
 						<a href="#" class="btn-siblings"><i>&nbsp;</i><span>Электроавтоматика</span></a>
 						<div class="copyright">&copy; 2017 ОАО ДВЭМЗ</div>
 						<div class="map-site"><a href="map-site.html" title="Перейти на карту сайта">Карта сайта</a></div>
