--- a/src/__automatic-catalog.html
+++ b/src/__automatic-catalog.html
@@ -5,7 +5,7 @@
 
 <div class="wrapper">
 	<!--HEADER-->
-	@@include('_layout_header--ea.tpl', {
+	@@include('_layout_header--ea.xhtml', {
 		"mainNavItemActive": "Производство"
 	})
 	<!--HEADER end-->
