--- a/src/__automatic-news-inner.html
+++ b/src/__automatic-news-inner.html
@@ -1,6 +1,7 @@
 @@include('_layout_head.tpl', {
 	"title": "ЭA - Теперь мы партнеры завода по производству трансформаторов ТМГ",
-	"pageClass": "ea-site"
+	"pageClass": "ea-site",
+	"ea": "true"
 })
 
 <div class="wrapper">
