--- a/src/automatic-card.html
+++ b/src/automatic-card.html
@@ -26,9 +26,9 @@
 	<meta property="og:description" content="Описание">
 	<meta property="og:site_name" content="Расширенное название">
 	<!--Favicon-->
-	<link rel="shortcut icon" href="favicon.ico">
-	<link rel="icon" sizes="16x16 32x32 64x64" href="favicon.ico">
-	<link rel="apple-touch-icon" href="apple-touch-icon.png">
+	<link rel="shortcut icon" href="favicon--ea.ico">
+	<link rel="icon" sizes="16x16 32x32 64x64" href="favicon--ea.ico">
+	<link rel="apple-touch-icon" href="apple-touch-icon--ea.png">
 	<!--Style-->
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/main.css">
@@ -41,7 +41,7 @@
 	<!-- >>> head.tpl END <<< -->
 	<div class="wrapper">
 		<!--HEADER-->
-		<!--header-->
+		<!--header panel-->
 		<header class="header">
 			<div class="header__align">
 				<div class="header__holder">
@@ -107,8 +107,8 @@
 				</div>
 			</div>
 		</header>
-		<!--header end-->
-		<!--NAVIGATION POPUP-->
+		<!--header panel end-->
+		<!--navigation popup-->
 		<aside class="shutter nav-popup-js">
 			<div class="shutter__align">
 				<div class="shutter__holder">
@@ -131,7 +131,7 @@
 								<ul class="nav__list nav-js">
 									<!--nav item start-->
 									<li class="">
-										<a href="typography.html"><span>О компании</span></a>
+										<a href="automatic-typography.html"><span>О компании</span></a>
 									</li>
 									<!--nav item end-->
 									<!--nav item start-->
@@ -168,7 +168,7 @@
 					<div class="shutter__row">
 						<div class="shutter__cell">
 							<footer class="shutter-footer">
-								<a href="#" class="btn-siblings"><i>&nbsp;</i><span>Электрощитовое <br> оборудование</span></a>
+								<a href="index.html" class="btn-siblings"><i>&nbsp;</i><span>Электрощитовое <br> оборудование</span></a>
 								<div class="copyright">&copy; 2017 ОАО Электроавтоматика</div>
 								<div class="map-site"><a href="map-site.html" title="Перейти на карту сайта">Карта сайта</a></div>
 							</footer>
@@ -177,8 +177,8 @@
 				</div>
 			</div>
 		</aside>
-		<!--NAVIGATION POPUP end-->
-		<!--SEARCH POPUP-->
+		<!--navigation popup end-->
+		<!--search popup-->
 		<aside class="shutter shutter-wide search-popup-js">
 			<div class="shutter__align">
 				<div class="shutter__holder">
@@ -217,7 +217,7 @@
 					<div class="shutter__row">
 						<div class="shutter__cell">
 							<footer class="shutter-footer">
-								<a href="#" class="btn-siblings"><i>&nbsp;</i><span>Электрощитовое <br> оборудование</span></a>
+								<a href="index.html" class="btn-siblings"><i>&nbsp;</i><span>Электрощитовое <br> оборудование</span></a>
 								<div class="copyright">&copy; 2017 ОАО Электроавтоматика</div>
 								<div class="map-site"><a href="map-site.html" title="Перейти на карту сайта">Карта сайта</a></div>
 							</footer>
@@ -226,8 +226,8 @@
 				</div>
 			</div>
 		</aside>
-		<!--SEARCH POPUP end-->
-		<!--LOGIN POPUP-->
+		<!--search popup end-->
+		<!--login popup-->
 		<aside class="shutter login-popup-js">
 			<div class="shutter__align">
 				<div class="shutter__holder">
@@ -359,7 +359,7 @@
 					<div class="shutter__row">
 						<div class="shutter__cell">
 							<footer class="shutter-footer">
-								<a href="#" class="btn-siblings"><i>&nbsp;</i><span>Электрощитовое <br> оборудование</span></a>
+								<a href="index.html" class="btn-siblings"><i>&nbsp;</i><span>Электрощитовое <br> оборудование</span></a>
 								<div class="copyright">&copy; 2017 ОАО Электроавтоматика</div>
 								<div class="map-site"><a href="map-site.html" title="Перейти на карту сайта">Карта сайта</a></div>
 							</footer>
@@ -368,7 +368,7 @@
 				</div>
 			</div>
 		</aside>
-		<!--LOGIN POPUP end-->
+		<!--login popup end-->
 		<!--HEADER end-->
 		<!--TOP PANEL-->
 		<aside class="top-panel">
@@ -447,9 +447,9 @@
 						</div>
 					</a>
 				</div>
-				<a href="#" class="btn-siblings"><i>&nbsp;</i><span>Электрощитовое <br> оборудование</span></a>
+				<a href="index.html" class="btn-siblings"><i>&nbsp;</i><span>Электрощитовое <br> оборудование</span></a>
 			</div>
-			<a href="#" class="btn-catalog btn-catalog-js"><span>Каталог</span></a>
+			<a href="automatic-catalog.html" class="btn-catalog btn-catalog-js"><span>Каталог</span></a>
 		</aside>
 		<!--TOP PANEL end-->
 		<!--MAIN-->
@@ -3150,82 +3150,6 @@
 	</div>
 	<!-- >>> foot.tpl <<< -->
 	<!--footer-->
-	<footer class="footer">
-		<div class="max-wrap layout">
-			<div class="footer__holder">
-				<!--footer common-->
-				<div class="footer-common">
-					<div class="footer-common-holder">
-						<!--footer nav-->
-						<div class="footer-nav">
-							<div class="footer-nav__col">
-								<strong class="footer-nav__title"><a href="#"><span>Электрощитовое оборудование</span></a></strong>
-								<ul class="footer-nav__links">
-									<li><a href="#"><span>Трансформаторные подстанции (однотрансформаторные)</span></a></li>
-									<li><a href="#"><span>Камеры сборные односторонние КСО</span></a></li>
-									<li><a href="#"><span>Ячейки ЩО-70</span></a></li>
-								</ul>
-							</div>
-							<div class="footer-nav__col">
-								<strong class="footer-nav__title"><span>Трансформаторы ТМГ</span></strong>
-								<ul class="footer-nav__links">
-									<li><a href="#"><span>Пункт коммерческого учета ПКУ-6 (10) КВ</span></a></li>
-									<li><a href="#"><span>Вводно-распределительные устройства ВРУ</span></a></li>
-									<li><a href="#"><span>Главные распределительные щиты ГРЩ</span></a></li>
-								</ul>
-							</div>
-							<div class="footer-nav__col">
-								<strong class="footer-nav__title"><span>Высоковольтное оборудование</span></strong>
-								<ul class="footer-nav__links">
-									<li><a href="#"><span>Другие низковольтные комплектные устройства  (ШР, ПР, ЯРП, ЯВУ, ШУ, ОЩВ, ЩЭ, ЯТП,ЩСУ, ЩАП, РУСМ, Я5ХХХ,АВР)</span></a></li>
-								</ul>
-							</div>
-							<div class="footer-nav__col">
-								<ul class="footer-nav__list">
-									<li><a href="#"><span>О компании</span></a></li>
-									<li><a href="#"><span>Производство</span></a></li>
-									<li><a href="#"><span>Монтажные работы</span></a></li>
-									<li><a href="#"><span>Сотрудничество</span></a></li>
-									<li><a href="#"><span>Заказ</span></a></li>
-									<li><a href="#"><span>Контакты</span></a></li>
-								</ul>
-							</div>
-							<div class="footer-nav__col footer-add-info">
-								<div class="footer-nav__item">
-									<span class="copyright">&copy; 2017 ОАО ДВЭМЗ»</span>
-								</div>
-								<div class="footer-nav__item">
-									<ul class="dl">
-										<li>
-											<div class="dt hide">Адрес:</div>
-											<div class="dd">ОАО ДВЭМЗ, г. Владивосток, ул. Молодежная, строение 1, корп. 3</div>
-										</li>
-										<li>
-											<div class="dt">Тел:</div>
-											<div class="dd"><a href="tel:+7 (423) 230-21-37">+7 (423) 230-21-37</a></div>
-										</li>
-										<li>
-											<div class="dt">Факс:</div>
-											<div class="dd">(423) 254 48 86</div>
-										</li>
-										<li>
-											<div class="dt">Эл. почта:</div>
-											<div class="dd"><a href="mailto:info@dvemz.ru">info@dvemz.ru</a></div>
-										</li>
-									</ul>
-								</div>
-								<div class="footer-nav__item">
-									<strong class="dev">Дизайн сайта: <a href="http://astronim.by/">Astronim*Support</a></strong>
-								</div>
-							</div>
-						</div>
-						<!--footer nav end-->
-					</div>
-				</div>
-				<!--footer common end-->
-			</div>
-		</div>
-	</footer>
 	<!--footer end-->
 	<!--Map-->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnFqiG7GVEuZZeE5XCILGj1Tqz1KOMye8&sensor=false&extension=.js&language=ru"></script>
