--- a/src/__all-pages.html
+++ b/src/__all-pages.html
@@ -29,12 +29,14 @@
 
 								<ul>
 									<li><a href="index.html" target="_blank"><span>Главная</span></a></li>
+									<li><a href="typography.html" target="_blank"><span>Типографика</span></a></li>
 									<li><a href="news-inner.html" target="_blank"><span>Новостная текстовая</span></a></li>
 								</ul>
 
 								<h2><span class="mark">Электроавтоматика</span></h2>
 
 								<ul>
+									<li><a href="automatic-typography.html" target="_blank"><span>Типографика</span></a></li>
 									<li><a href="automatic-catalog.html" target="_blank"><span>Каталог</span></a></li>
 									<li><a href="automatic-products.html" target="_blank"><span>Список продуктов</span></a></li>
 									<li><a href="automatic-card.html" target="_blank"><span>Карточка товара</span></a></li>
@@ -45,7 +47,6 @@
 								<h2><span class="mark">Общие</span></h2>
 
 								<ul>
-									<li><a href="typography.html" target="_blank"><span>Типографика (пока общая)</span></a></li>
 									<li><a href="map-site.html" target="_blank"><span>Карта сайта (заглушка)</span></a></li>
 								</ul>
 							</div>
