--- a/src/__automatic-products.html
+++ b/src/__automatic-products.html
@@ -1,6 +1,7 @@
 @@include('_layout_head.tpl', {
 	"title": "ЭA - Продукты",
-	"pageClass": "ea-site ea-has-catalog-menu"
+	"pageClass": "ea-site ea-has-catalog-menu",
+	"ea": "true"
 })
 
 <div class="wrapper">
