--- a/src/_layout_header.xhtml
+++ b/src/_layout_header.xhtml
@@ -1,4 +1,4 @@
-<!--HEADER-->
+<!--header panel-->
 <header class="header">
 	<div class="header__align">
 		<div class="header__holder">
@@ -10,7 +10,6 @@
 							<!--<div class="logo-title"><span>Дальневосточный электромонтажный завод</span></div>-->
 							<!--<div class="logo-text"><span>Производство и продажа Электромонтажного оборудования</span></div>-->
 						</a>
-						<img style="display: none;" src="img/logo.png" alt="ДВЭМЗ">
 					</div>
 				</div>
 			</div>
@@ -33,20 +32,17 @@
 		</div>
 	</div>
 </header>
-<!--HEADER end-->
+<!--header panel end-->
 
-<!--NAVIGATION-->
+<!--navigation popup-->
 <aside class="shutter nav-popup-js">
 	<div class="shutter__align">
 		<div class="shutter__holder">
 			<div class="shutter__row">
 				<div class="shutter__cell">
-					<header class="shutter-header">
-						<a href="index.html" class="logo-nav">
-							<div class="logo-nav__img"><span>ДВЭМЗ</span></div>
-							<span class="logo-nav__title">Электрощитовое оборудование</span>
-						</a>
-					</header>
+					@@include('_tpl_shutter-header.tpl', {
+						"site": "dvemz"
+					})
 				</div>
 			</div>
 			<div class="shutter__row">
@@ -61,14 +57,197 @@
 			</div>
 			<div class="shutter__row">
 				<div class="shutter__cell">
-					<footer class="shutter-footer">
-						<a href="#" class="btn-siblings"><i>&nbsp;</i><span>Электроавтоматика</span></a>
-						<div class="copyright">&copy; 2017 ОАО ДВЭМЗ</div>
-						<div class="map-site"><a href="map-site.html" title="Перейти на карту сайта">Карта сайта</a></div>
-					</footer>
+					@@include('_tpl_shutter-footer.tpl', {
+						"site": "dvemz"
+					})
 				</div>
 			</div>
 		</div>
 	</div>
 </aside>
-<!--NAVIGATION end-->
+<!--navigation popup end-->
+
+<!--search popup-->
+<aside class="shutter shutter-wide search-popup-js">
+	<div class="shutter__align">
+		<div class="shutter__holder">
+			<div class="shutter__row">
+				<div class="shutter__cell">
+					@@include('_tpl_shutter-header.tpl', {
+						"site": "dvemz"
+					})
+				</div>
+			</div>
+			<div class="shutter__row">
+				<div class="shutter__cell">
+					<div class="layout-text">
+						<!-- search form -->
+						<div class="search-form">
+							<form action="#" method="post">
+								<div class="search-form__field input-wrap light-form field-effects-js">
+									<div class="label-holder"><label for="search-field">Поиск</label></div>
+									<input class="search-form__input" type="search" id="search-field"/>
+									<div class="search-form__btn">
+										<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 551.7 548.4" enable-background="new 0 0 551.7 548.4"> <path d="M353.9,374.2l-12,4.6c-1.2,0.4-3,1.1-5.1,2.5c-0.6,0.4-1.2,0.9-1.9,1.3c-0.6,0.4-1.2,0.8-1.8,1.2  c-38.7,26.4-79.2,39.8-120.2,39.8c-18.3,0-37-2.7-55.7-7.9c-42.1-11.8-76.4-32-101.9-59.9c-25.2-27.6-42.7-63.8-52-107.4  c-1.1-5-1.7-10.4-2.4-16.1c-0.3-2.4-0.6-4.8-0.9-7.2v-25.5c0.3-1.4,0.7-3.2,0.8-5.4c2.3-27.7,9.7-53.9,22-77.9  C59.9,44.6,131.8,0,210.5,0c31.4,0,61.9,7,90.8,20.9c74,35.5,114.4,96.3,120.3,180.9c3.1,44.2-8.9,87.1-35.5,127.5  c-0.9,1.3-1.6,2.6-2.3,3.7c-0.3,0.4-0.5,0.9-0.8,1.3l-8.1,13.1l10.5,11.2l0.7,0.7c0.6,0.7,1.1,1.2,1.7,1.8  c54.6,54.6,109.2,109.2,163.8,163.8c-7.8,7.8-15.6,15.7-23.6,23.6L353.9,374.2z M211.5,33.4c-98.1,0-178.2,79.8-178.4,178  c-0.1,47.6,18.4,92.5,52.1,126.3c33.8,33.9,78.6,52.5,126.3,52.6c98.3,0,178.3-80,178.4-178.3c0.1-98.3-79.8-178.4-178.1-178.5  H211.5z"></path> </svg>
+										<span>Искать</span>
+										<input type="submit" value="">
+									</div>
+								</div>
+							</form>
+						</div>
+						<!--search form end-->
+					</div>
+				</div>
+			</div>
+			<div class="shutter__row">
+				<div class="shutter__cell">
+					@@include('_tpl_shutter-footer.tpl', {
+						"site": "dvemz"
+					})
+				</div>
+			</div>
+		</div>
+	</div>
+</aside>
+<!--search popup end-->
+
+<!--login popup-->
+<aside class="shutter login-popup-js">
+	<div class="shutter__align">
+		<div class="shutter__holder">
+			<div class="shutter__row">
+				<div class="shutter__cell">
+					@@include('_tpl_shutter-header.tpl', {
+						"site": "dvemz"
+					})
+				</div>
+			</div>
+			<div class="shutter__row">
+				<div class="shutter__cell">
+					<div class="enter-form js-tabs">
+						<div class="tabs-light__nav layout-text">
+							<a href="#tab-login-form" class="tabs-light__tab js-tab-anchor active-tab"><span>Вход</span></a>
+							<a href="#tab-registration-form" class="tabs-light__tab js-tab-anchor"><span>Регистрация</span></a>
+						</div>
+						<div class="tabs-light__nav tabs-light__nav--alt layout-text">
+							<a href="#tab-login-form" class="tabs-light__tab js-tab-anchor">&lt; <span>Назад</span></a>
+						</div>
+
+						<div class="tabs-light__panels js-tab-container">
+							<div class="tabs-light__panel js-tab-content" id="tab-login-form">
+								<div class="layout-text">
+									<form action="#" method="get">
+										<div class="input-wrap light-form field-effects-js">
+											<div class="label-holder"><label for="login-form__email-field">Email или номер мобильного телефона: <span class="form-mark">*</span></label></div>
+											<input type="text" id="login-form__email-field"/>
+											<span class="error-note">Проверьте правильность регистрационных данных</span>
+											<span class="confirm-note">&nbsp;</span>
+										</div>
+										<div class="input-wrap light-form field-effects-js">
+											<div class="label-holder"><label for="login-form__password-field">Пароль: <span class="form-mark">*</span></label></div>
+											<input type="password" id="login-form__password-field"/>
+											<span class="error-note">Проверьте правильность регистрационных данных</span>
+											<span class="confirm-note">&nbsp;</span>
+										</div>
+
+										<div class="form-footer">
+											<div class="form-buttons">
+												<button class="btn-outline btn-submit">Вход</button>
+											</div>
+											<div class="form-note">
+												<div class="form-note__item"><a href="#tab-login-forget" class="js-tab-anchor">Забыли пароль?</a></div>
+											</div>
+										</div>
+									</form>
+								</div>
+							</div>
+							<div class="tabs-light__panel js-tab-content" id="tab-registration-form">
+								<div class="layout-text">
+									<form action="#" method="get">
+										<div class="input-wrap light-form field-effects-js">
+											<div class="label-holder"><label for="registration-form__l_name-field">Фамилия: <span class="form-mark">*</span></label></div>
+											<input type="text" id="registration-form__l_name-field"/>
+											<span class="error-note">Поле обязательное для заполнения</span>
+											<span class="confirm-note">&nbsp;</span>
+										</div>
+										<div class="input-wrap light-form field-effects-js">
+											<div class="label-holder"><label for="registration-form__f_name-field">Имя: <span class="form-mark">*</span></label></div>
+											<input type="text" id="registration-form__f_name-field"/>
+											<span class="error-note">Поле обязательное для заполнения</span>
+											<span class="confirm-note">&nbsp;</span>
+										</div>
+										<div class="input-wrap light-form field-effects-js">
+											<div class="label-holder"><label for="registration-form__phone-field">Мобильный телефон: <span class="form-mark">*</span></label></div>
+											<input type="text" id="registration-form__phone-field"/>
+											<span class="error-note">Поле обязательное для заполнения</span>
+											<span class="confirm-note">&nbsp;</span>
+										</div>
+										<div class="input-wrap light-form field-effects-js">
+											<div class="label-holder"><label for="registration-form__tel-field">Дополнительный телефон: <span class="form-mark">*</span></label></div>
+											<input type="text" id="registration-form__tel-field"/>
+											<span class="error-note">Поле обязательное для заполнения</span>
+											<span class="confirm-note">&nbsp;</span>
+										</div>
+										<div class="input-wrap light-form field-effects-js">
+											<div class="label-holder"><label for="registration-form__email-field">Электронная почта: <span class="form-mark">*</span></label></div>
+											<input type="email" id="registration-form__email-field"/>
+											<span class="error-note">Поле обязательное для заполнения</span>
+											<span class="confirm-note">&nbsp;</span>
+										</div>
+										<div class="input-wrap light-form field-effects-js">
+											<div class="label-holder"><label for="registration-form__password-field">Пароль: <span class="form-mark">*</span></label></div>
+											<input type="email" id="registration-form__password-field"/>
+											<span class="error-note">Необходимо ввести пароль</span>
+											<span class="confirm-note">&nbsp;</span>
+										</div>
+										<div class="input-wrap light-form field-effects-js">
+											<div class="label-holder"><label for="registration-form__repeat-field">Повторите пароль: <span class="form-mark">*</span></label></div>
+											<input type="email" id="registration-form__repeat-field"/>
+											<span class="error-note">Пароли не совпадают</span>
+											<span class="confirm-note">&nbsp;</span>
+										</div>
+
+										<div class="form-footer">
+											<div class="form-buttons">
+												<button class="btn-outline btn-submit">Регистрация</button>
+											</div>
+											<div class="form-note">
+												<div class="form-note__item">* Поля обязательны для заполнения</div>
+											</div>
+										</div>
+									</form>
+								</div>
+							</div>
+							<div class="tabs-light__panel js-tab-content" id="tab-login-forget">
+								<div class="layout-text">
+									<form action="#" method="get">
+										<div class="input-wrap light-form field-effects-js">
+											<div class="label-holder"><label for="login-form__email-forget">Введите адрес электронной почты или номер телефона, связанный с вашим аккаунтом:</label></div>
+											<input type="text" id="login-form__email-forget"/>
+											<span class="error-note">Проверьте правильность ввода</span>
+											<span class="confirm-note">&nbsp;</span>
+										</div>
+
+										<div class="form-footer">
+											<div class="form-buttons">
+												<button class="btn-outline btn-submit">Отправить</button>
+											</div>
+										</div>
+									</form>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="shutter__row">
+				<div class="shutter__cell">
+					@@include('_tpl_shutter-footer.tpl', {
+						"site": "dvemz"
+					})
+				</div>
+			</div>
+		</div>
+	</div>
+</aside>
+<!--login popup end-->
