--- a/src/_layout_header--ea.xhtml
+++ b/src/_layout_header--ea.xhtml
@@ -5,7 +5,7 @@
 			<div class="header__row header__row--logo">
 				<div class="header__cell">
 					<div class="logo">
-						<a href="index.html">
+						<a href="automatic-catalog.html">
 							<div class="logo-img">Электроавтоматика</div>
 							<!--<div class="logo-title"><span>Электроавтоматика</span></div>-->
 							<!--<div class="logo-text"><span>Производство и продажа Электромонтажного оборудования</span></div>-->
