--- a/src/automatic-products.html
+++ b/src/automatic-products.html
@@ -48,7 +48,7 @@
 					<div class="header__row header__row--logo">
 						<div class="header__cell">
 							<div class="logo">
-								<a href="index.html">
+								<a href="automatic-catalog.html">
 									<div class="logo-img">Электроавтоматика</div>
 									<!--<div class="logo-title"><span>Электроавтоматика</span></div>-->
 									<!--<div class="logo-text"><span>Производство и продажа Электромонтажного оборудования</span></div>-->
@@ -116,7 +116,7 @@
 						<div class="shutter__cell">
 							<header class="shutter-header">
 								<a href="#" class="btn-popup-close btn-shutter-close-js"><i>&nbsp;</i><span>Закрыть</span></a>
-								<a href="index.html" class="logo-nav">
+								<a href="automatic-catalog.html" class="logo-nav">
 									<div class="logo-nav__img"><span>Электроавтоматика</span></div>
 									<span class="logo-nav__title">Интернет-магазин</span>
 								</a>
@@ -186,7 +186,7 @@
 						<div class="shutter__cell">
 							<header class="shutter-header">
 								<a href="#" class="btn-popup-close btn-shutter-close-js"><i>&nbsp;</i><span>Закрыть</span></a>
-								<a href="index.html" class="logo-nav">
+								<a href="automatic-catalog.html" class="logo-nav">
 									<div class="logo-nav__img"><span>Электроавтоматика</span></div>
 									<span class="logo-nav__title">Интернет-магазин</span>
 								</a>
@@ -235,7 +235,7 @@
 						<div class="shutter__cell">
 							<header class="shutter-header">
 								<a href="#" class="btn-popup-close btn-shutter-close-js"><i>&nbsp;</i><span>Закрыть</span></a>
-								<a href="index.html" class="logo-nav">
+								<a href="automatic-catalog.html" class="logo-nav">
 									<div class="logo-nav__img"><span>Электроавтоматика</span></div>
 									<span class="logo-nav__title">Интернет-магазин</span>
 								</a>
@@ -374,7 +374,7 @@
 		<aside class="top-panel">
 			<div class="top-panel-holder">
 				<div class="logo-alt">
-					<a href="index.html">
+					<a href="automatic-catalog.html">
 						<div class="logo-alt-title">
 							<div class="logo-alt-title__fig"><span>Электроавтоматика</span></div>
 						</div>
