--- a/src/catalog.html
+++ b/src/catalog.html
@@ -7,7 +7,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>ДВЭМЗ - Теперь мы партнеры завода по производству трансформаторов ТМГ</title>
+	<title>ДВЭМЗ - Каталог</title>
 	<!--Mobile optimized-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.2">
 	<!--Theme color-->
@@ -135,7 +135,7 @@
 									</li>
 									<!--nav item end-->
 									<!--nav item start-->
-									<li class="">
+									<li class="current">
 										<a href="catalog.html"><span>Производство</span></a>
 									</li>
 									<!--nav item end-->
@@ -371,7 +371,7 @@
 		<!--login popup end-->
 		<!--HEADER end-->
 		<!--TOP PANEL-->
-		<aside class="top-panel">
+		<aside class="top-panel top-panel--alt">
 			<div class="top-panel-holder">
 				<div class="logo-alt">
 					<a href="index.html">
