--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
 									<!--nav item end-->
 									<!--nav item start-->
 									<li class="">
-										<a href="#"><span>Производство</span></a>
+										<a href="catalog.html"><span>Производство</span></a>
 									</li>
 									<!--nav item end-->
 									<!--nav item start-->
