--- a/src/__automatic-products.html
+++ b/src/__automatic-products.html
@@ -38,7 +38,7 @@
 									<!--products-->
 									<div class="products view-container-js">
 										<section class="products__list">
-											@@loop("_products-items.tpl", "includes-json/products-items.json")
+											@@loop("_tpl_products-items.tpl", "includes-json/products-items.json")
 										</section>
 									</div>
 									<!--products end-->
