--- a/src/all-pages.html
+++ b/src/all-pages.html
@@ -465,6 +465,7 @@
 									<ul>
 										<li><a href="index.html" target="_blank"><span>Главная</span></a></li>
 										<li><a href="typography.html" target="_blank"><span>Типографика</span></a></li>
+										<li><a href="catalog.html" target="_blank"><span>Каталог</span></a></li>
 										<li><a href="news-inner.html" target="_blank"><span>Новостная текстовая</span></a></li>
 									</ul>
 									<h2><span class="mark">Электроавтоматика</span></h2>
