--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Главная</title>
+	<title>ДВЭМЗ - Главная</title>
 	<!--Mobile optimized-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.2">
 	<!--Theme color-->
